--- a/wp-content/themes/bestway/languages/ru_RU.po
+++ b/wp-content/themes/bestway/languages/ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Bestway\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-10 13:01+0200\n"
-"PO-Revision-Date: 2015-09-01 13:17+0300\n"
+"PO-Revision-Date: 2015-09-01 13:39+0300\n"
 "Language-Team: Themelions <admin@themelions.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,8 +44,8 @@ msgstr "Поиск ..."
 msgid "One Comment"
 msgid_plural "%1$s Comments"
 msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[1] "%1$ Комментария"
+msgstr[2] "%1$ Комментариев"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:42
 msgid "Comment navigation"
@@ -1306,11 +1306,11 @@ msgstr ""
 
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/theme_functions.php:213
 msgid "Previous"
-msgstr ""
+msgstr "Предыдущая запись"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/theme_functions.php:214
 msgid "Next"
-msgstr ""
+msgstr "Следующая запись"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/theme_functions.php:219
 msgid "About the author"
