--- a/wp-content/themes/bestway/languages/ru_RU.po
+++ b/wp-content/themes/bestway/languages/ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Bestway\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-10 13:01+0200\n"
-"PO-Revision-Date: 2015-09-01 13:39+0300\n"
+"PO-Revision-Date: 2015-09-02 22:05+0300\n"
 "Language-Team: Themelions <admin@themelions.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -65,7 +65,7 @@ msgstr "Комментарии закрыты"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:64
 msgid "Leave a Reply"
-msgstr "Оставить Комментарий"
+msgstr "Оставить комментарий"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:65
 #, php-format
@@ -78,7 +78,7 @@ msgstr ""
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:67
 msgid "Post Comment"
-msgstr "Написать Комментарий"
+msgstr "Написать комментарий"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:68
 msgid "Comment..."
@@ -98,15 +98,15 @@ msgstr ""
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:73
 msgid "Name (required)"
-msgstr ""
+msgstr "Имя (обязательно)"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:74
 msgid "Email (required)"
-msgstr ""
+msgstr "Email (обязательно)"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:75
 msgid "Website"
-msgstr ""
+msgstr "Сайт"
 
 #: C:\Users\Momizat\Desktop\bestway/content-archive.php:5
 msgid "Browsing Category"
@@ -1057,7 +1057,7 @@ msgstr ""
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/bestway.php:172
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/popular-item.php:89
 msgid "No Comments"
-msgstr "Комментариев Нет"
+msgstr "Комментариев нет"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/bestway.php:172
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/popular-item.php:89
@@ -1067,7 +1067,7 @@ msgstr "1 Комментарий"
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/bestway.php:172
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/popular-item.php:89
 msgid "% Comments"
-msgstr "% Комментариев"
+msgstr "% Комментария"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/functions/bestway.php:175
 msgid "By : "
@@ -6785,7 +6785,7 @@ msgstr ""
 
 #: C:\Users\Momizat\Desktop\bestway/framework/shortcodes/editor/templates/single-post.php:17
 msgid "%n comments"
-msgstr "%n комментариев"
+msgstr "%n комментария"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/sidebars/sidebars.php:20
 msgid "Delete sidebar"
@@ -7094,19 +7094,19 @@ msgstr ""
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/recent-comments.php:44
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/recent-comments.php:48
 msgid "on "
-msgstr ""
+msgstr "к записи "
 
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/recent-comments.php:48
 msgid "on"
-msgstr ""
+msgstr "в"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/recent-comments.php:48
 msgid "in:"
-msgstr ""
+msgstr "к записи:"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/recent-comments.php:74
 msgid "Recent Comments"
-msgstr "Свежие Комментарии"
+msgstr "Свежие комментарии"
 
 #: C:\Users\Momizat\Desktop\bestway/framework/widgets/recent-comments.php:102
 msgid "Number Of Comments:"
