--- a/wp-content/themes/bestway/languages/ru_RU.po
+++ b/wp-content/themes/bestway/languages/ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Bestway\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-10 13:01+0200\n"
-"PO-Revision-Date: 2015-09-03 00:06+0300\n"
+"PO-Revision-Date: 2015-09-03 00:20+0300\n"
 "Language-Team: Themelions <admin@themelions.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,9 +43,9 @@ msgstr "Поиск ..."
 #, php-format
 msgid "One Comment"
 msgid_plural "%1$s Comments"
-msgstr[0] ""
-msgstr[1] "%1$ Комментария"
-msgstr[2] "%1$ Комментариев"
+msgstr[0] "%1$s комментарий"
+msgstr[1] "%1$s комментария"
+msgstr[2] "%1$s комментариев"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:42
 msgid "Comment navigation"
@@ -74,7 +74,7 @@ msgstr "Ответить %s"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:66
 msgid "Cancel Reply"
-msgstr ""
+msgstr "Отменить ответ"
 
 #: C:\Users\Momizat\Desktop\bestway/comments.php:67
 msgid "Post Comment"
